--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,14 @@
 .Container {
   @apply max-w-7xl w-11/12 mx-auto;
 }
+
+.hero {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://i.ibb.co/XtpmwJY/recipe5.jpg");
+
+  width: 100%;
+  height: 100vh;
+  max-height: 800px;
+  background-size: cover;
+  background-position: center;
+}
